--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>learning git</title>
 </head>
 <body>
-    <h1>Welcome to Git</h1>
+    <h1 style ="color:blue;">Welcome to Git !</h1>
     <p>adding a body to github. ahead of my local repo</p>
 </body>
 </html>
