--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>learning git</title>
+    <style>
+        h1 {
+            font-family: Arial, Helvetica, sans-serif;
+            color: blue;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="font-family: Arial, Helvetica, sans-serif; color:blue;">Welcome to Git</h1>
+    <h1>Welcome to Git</h1>
 <p>adding a body to github. ahead of my local repo</p>
 </body>
 </html>
