--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1 style="font-family: Arial, Helvetica, sans-serif; color:blue;">Welcome to Git</h1>
-<p>adding a body to github. ahead of my local repo</p>
+<p>adding a body to github, ahead of my local repo</p>
 </body>
 </html>
